--- a/TaskManagementApp/Views/TaskItems/Index.cshtml
+++ b/TaskManagementApp/Views/TaskItems/Index.cshtml
@@ -59,7 +59,7 @@
                 }
                 else
                 {
-                    <button class="btn btn-success" disabled>Mark as completed</button>
+                    <button class="btn btn-secondary" disabled>Mark as completed</button>
                 }
                 <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger">Delete</a>
             </td>
